<resources>
    <string name="app_name">Expresso</string>
    <string name="onboarding_contentText1">Create and publish blog posts with ease.</string>
    <string name="onboarding_contentText2">Categorize and tag your posts for better discoverability.</string>
    <string name="onboarding_contentText3">Promote your blog posts on social media.</string>
    <string name="txt_continue">Continue</string>
    <string name="onboarding_to_auth_txt">Create Your First Blog Post</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
</resources>